# LearnGCGE

./: .clang-format  .gitignore  CMakeLists.txt  README.md
3rd/petsc/linux/include/: gklib_tls.h  metis.h  parmetis.h  petscconf.h  petscconf_poison.h  petscconfiginfo.h  petscmachineinfo.h  petscpkg_version.h  ptscotch.h  ptscotchf.h  scotch.h  scotchf.h
3rd/petsc/linux/include/hwloc/autogen/: config.h
3rd/petsc/linux/lib/cmake/scalapack-2.2.1/: scalapack-targets-release.cmake  scalapack-targets.cmake
3rd/petsc/linux/lib/petsc/conf/: configure-hash  petscrules  petscvariables  pkg.conf.bison  pkg.conf.hwloc  pkg.conf.metis  pkg.conf.mumps  pkg.conf.parmetis  pkg.conf.ptscotch  pkg.conf.scalapack  pkg.gitcommit.metis  pkg.gitcommit.parmetis  pkg.gitcommit.ptscotch  pkg.gitcommit.scalapack  reconfigure-arch-linux-c-tutorial.py  rules  rules_doc.mk  rules_util.mk  uninstall.py  variables
3rd/petsc/linux/lib/petsc/conf/modules/petsc/: 3.22.3
3rd/petsc/linux/lib/pkgconfig/: PETSc.pc  hwloc.pc  scalapack.pc
3rd/petsc/windows/include/: petscconf.h  petscconf_poison.h  petscconfiginfo.h  petscfix.h  petscmachineinfo.h  petscpkg_version.h  petscversion.h
3rd/petsc/windows/lib/cmake/scalapack-2.2.1/: scalapack-targets.cmake
3rd/slepc/linux/include/: slepcconf.h
3rd/slepc/windows/include/: slepcconf.h
3rd/ubuntu/include/openblas/: openblas_config.h
3rd/ubuntu/lib/cmake/OpenBLAS/: OpenBLASConfig.cmake  OpenBLASTargets-noconfig.cmake
3rd/windows/include/openblas/: openblas_config.h
app/: app_ccs.c  app_lapack.c
cmake/: PETScConfig.cmake  SLEPcConfig.cmake  linux_mpicc.cmake
config/: linux_mpicc.cmake
docs/: Eigenvalue and Eigenvector File Protocol.txt  GCGE User Input Parameter Protocol.txt  GCGE代码框架及算法流程.md  GCGE按特征值范围求解理论推导.md
example/: M.mtx  test_gcge_01.c  usrParam.txt
gcge/: CMakeLists.txt
gcge/app/: app_ccs.c  app_lapack.c  app_slepc.c
gcge/include/: app_ccs.h  app_lapack.h  app_slepc.h  error_code.h  ops.h  ops_config.h  ops_eig_sol_gcg.h  ops_lin_sol.h  range_tool.h
gcge/src/: ops_eig_sol_gcg.c  ops_lin_sol.c  ops_multi_grid.c  ops_multi_vec.c  ops_orth.c
include/: app_ccs.h  app_lapack.h  mmio.h  mmio_h.h  ops.h  ops_config.h  ops_eig_sol_gcg.h  ops_lin_sol.h  ops_orth.h
solver/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  ops.c  ops_multi_grid.c  ops_multi_vec.c  ops_orth.c  test_app_ccs.c
src/io/: input_read_tool.cpp  input_read_tool.h  io_eigen_result.cpp  io_eigen_result.h  mmio.h  mmio_eigen_result_save.cpp  mmio_eigen_result_save.h  mmio_h.h  mmio_reader.c  mmio_reader.h  mmloader.c  mmloader.h  param_struct.h  read_user_param.cpp  read_user_param.h
src/solver/: count_eigen_num.cpp  count_eigen_num.h  gcge_solver.cpp  gcge_solver.h
test/: Makefile  main.c  test_app_ccs.c  test_eig_sol_gcg.c
